test/files/neg/trait_fields_deprecated_overriding.check
trait_fields_deprecated_overriding.scala:10: warning: overriding value x in trait DeprecatedOverriding is deprecated
  override val x = 2
               ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
